Fixed Error in HTML

--- a/example.html
+++ b/example.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js" integrity="sha256-3t7gpD+/xy+brxk55l3wYgACIRGG28aPU1F2hWt5oOM=" crossorigin="anonymous"></script>
 
     <!-- Poisson Build Script -->
-    <script src-"https://rawgit.com/Evelios/penplot-stroke/master/build.js"></script>
+    <script src="https://rawgit.com/Evelios/penplot-stroke/master/build.js"></script>
     <script src="./build.js"></script>
 
 </head>
