--- a/example.html
+++ b/example.html
@@ -11,6 +11,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.5/dat.gui.js" integrity="sha256-bQjq9o+4i9F3woowji9B3STeK3m7aaIKepXGk1ESrvA=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js" integrity="sha256-3t7gpD+/xy+brxk55l3wYgACIRGG28aPU1F2hWt5oOM=" crossorigin="anonymous"></script>
 
+    <!-- Random Number Generator -->
+    <script src="https://rawgit.com/nquinlan/better-random-numbers-for-javascript-mirror/master/support/js/Alea.js"></script>
+    <script src="https://rawgit.com/nquinlan/better-random-numbers-for-javascript-mirror/master/support/js/Mash.js"></script>
+
     <!-- Poisson Build Script -->
     <script src="https://rawgit.com/Evelios/penplot-stroke/master/build.js"></script>
     <script src="./build.js"></script>
