Single Vertex Stroke

--- a/example.html
+++ b/example.html
@@ -12,8 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js" integrity="sha256-3t7gpD+/xy+brxk55l3wYgACIRGG28aPU1F2hWt5oOM=" crossorigin="anonymous"></script>
 
     <!-- Random Number Generator -->
-    <script src="https://rawgit.com/nquinlan/better-random-numbers-for-javascript-mirror/master/support/js/Alea.js"></script>
-    <script src="https://rawgit.com/nquinlan/better-random-numbers-for-javascript-mirror/master/support/js/Mash.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/alea@1.0.0/alea.js" integrity="sha256-06AwW/WVuVZfFWW+6qTiCsV5EARvuYIdZmXRGkw+qr0=" crossorigin="anonymous"></script>
 
     <!-- Poisson Build Script -->
     <script src="https://rawgit.com/Evelios/penplot-stroke/master/build.js"></script>
